Get genre name by id when user selects movie and Admin Panel for most deleted movies in cart
Delete message for cart item when user deletes movie from cart

--- a/src/main/resources/templates/movie_index.html
+++ b/src/main/resources/templates/movie_index.html
@@ -196,6 +196,11 @@
 </div>
 
 
+
+    <h1 th:text="|${genreName} Movies|"></h1>
+
+
+
 <div id="card-area">
     <div class="wrapper">
         <div class="box-area">
