--- a/src/main/resources/templates/purchased_movies.html
+++ b/src/main/resources/templates/purchased_movies.html
@@ -187,7 +187,7 @@
 
 <div th:if="${#ctx.session.shopOrderForUser == null}">
 
-  <p th:text="|You have not bought any digital movies with us ${#ctx.session.loggedInUser.getUsername()} |" class="notBought" ></p>
+  <p th:text="|You have not bought any digital movies with us ${#ctx.session.loggedInUser.getUsername()} |" class="notBought" style="font-family: poppins; font-weight: bold;font-size: 15px; color: white;" ></p>
 
 
   <div class="center">
