--- a/src/main/resources/templates/cart_index.html
+++ b/src/main/resources/templates/cart_index.html
@@ -64,6 +64,16 @@
       font-weight: bold;
     }
 
+    .message{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      color: red;
+      font-weight: bold;
+      margin-bottom: 50px;
+      font-family: poppins;
+    }
+
   </style>
 </head>
 <body>
@@ -90,6 +100,8 @@
 </div>
 
 <div th:unless="${movies == null}">
+
+  <div id="message" class="message" th:text="${message}"></div>
 
 <div class="col-lg-9 col-md-9 col-sm-12" style="margin-left: 200px; margin-bottom: 50px;">
   <div class="col-lg-12 col-sm-12">
