--- a/src/main/resources/templates/fragments/menu.html
+++ b/src/main/resources/templates/fragments/menu.html
@@ -80,14 +80,13 @@
             <a class="nav-link active" th:href="@{/logOut}" style="font-weight: bold;font-family: poppins;">Logout</a>
           </li>
 
-          <a class="nav-link active" th:href="@{/cart_index}" > <i class="fa" style="font-size:24px; margin-left: 850px">&#xf07a;</i>
+          <a class="nav-link active" th:href="@{/cart_index}" > <i class="fa" style="font-size:24px; margin-left: 600px">&#xf07a;</i>
             <span class="cartNumber" th:text="${totalCartItems}" style="font-family: poppins; font-weight: bold;">5 </span></a>
-
         </ul>
-        <!--<form class="d-flex" role="search">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>-->
+        <form class="d-flex" role="search" method="get" action="/viewMovieBySearch">
+          <input class="form-control me-2" type="search" placeholder="Enter movie name here" aria-label="Search" id="query" name="query">
+          <button class="btn btn-outline-dark"  style="color: black" type="submit">Search</button>
+        </form>
       </div>
     </div>
 
