--- a/src/main/resources/templates/loginSuccessful.html
+++ b/src/main/resources/templates/loginSuccessful.html
@@ -118,7 +118,7 @@
     }
 
     p{
-      font-size: 10px;
+      font-size: 12px;
       font-family: poppins;
       color: white;
       font-weight: bold;
@@ -128,6 +128,7 @@
       font-weight: bold;
       font-family: poppins;
       color: white;
+      font-size: 25px;
     }
 
     .login{
@@ -185,7 +186,7 @@
           <img th:src="@{'https://image.tmdb.org/t/p/w500/'+${movie.getBackdrop_path()}}"  alt="">
           <div class="overlay">
             <h3 th:text="${movie.getTitle()}"> Mountain</h3>
-            <p th:text="${movie.getOverview()}" ></p>
+            <p th:text="${movie.getOverview()}" style="overflow: auto; scrollbar-width: none;"></p>
             <a th:href="@{/movieTrailer(id=${movie.getId()})}">View Videos</a>
           </div>
         </div>
