--- a/src/main/resources/templates/registerSuccessUser.html
+++ b/src/main/resources/templates/registerSuccessUser.html
@@ -120,7 +120,7 @@
     }
 
     p{
-      font-size: 10px;
+      font-size: 12px;
       font-family: poppins;
       color: white;
       font-weight: bold;
@@ -130,6 +130,7 @@
       font-weight: bold;
       font-family: poppins;
       color: white;
+      font-size: 25px;
     }
 
     .register{
@@ -184,7 +185,7 @@
           <img th:src="@{'https://image.tmdb.org/t/p/w500/'+${movie.getBackdrop_path()}}"  alt="">
           <div class="overlay">
             <h3 th:text="${movie.getTitle()}"> Mountain</h3>
-            <p th:text="${movie.getOverview()}" ></p>
+            <p th:text="${movie.getOverview()}" style="overflow: auto; scrollbar-width: none;" ></p>
             <a th:href="@{/movieTrailer(id=${movie.getId()})}">View Videos</a>
           </div>
         </div>
