--- a/src/main/resources/templates/loginFailed.html
+++ b/src/main/resources/templates/loginFailed.html
@@ -9,14 +9,15 @@
 
 
 
-  h2{
+  h1{
     display: flex;
     justify-content: center;
     align-items: center;
     font-size: 50px;
-    color: darkred;
+    color: white;
     font-weight: bold;
-    -webkit-text-stroke: 3px black;
+    -webkit-text-stroke: 1px darkred;
+    font-family: poppins;
   }
 
   a{
@@ -40,19 +41,36 @@
     z-index: -1;
   }
 
+  .center {
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    margin-top: 150px;
+  }
+
+
 </style>
 <body>
 
 
-<header>
-  <h2 class="heading" style="margin-right: 1400px;">ScreenSafari</h2>
-</header>
+
+  <h1 class="heading">ScreenSafari</h1>
+
 
 <div id="background"></div>
 
-<h2 th:text="${message}"></h2>
 
-<a href ="/" ><button type="button" class="btn btn-primary">Go back to Login Page</button></a>
+
+
+<div class="center">
+
+
+  <h2 th:text="${message}" style="font-weight: bold; color: white; font-family: poppins"></h2>
+  <a href="/" style="text-decoration:none"><button type="button" class="btn btn-danger" style="font-weight: bold; color: white; font-family: poppins" >Go back to Login Page</button></a>
+</div>
 
 </body>
 </html>
