--- a/src/main/resources/static/css/storeIndex.css
+++ b/src/main/resources/static/css/storeIndex.css
@@ -1,11 +1,21 @@
+.message{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: red;
+    font-weight: bold;
+    margin-bottom: 50px;
+    font-family: poppins;
+}
+
 h1{
     display: flex;
     justify-content: center;
     align-items: center;
     font-size: 50px;
-    color: darkred;
+    color: white;
     font-weight: bold;
-    -webkit-text-stroke: 3px black;
+    -webkit-text-stroke: 1px darkred;
 }
 
 .wrapper{
@@ -31,12 +41,16 @@ img{
     max-width: 300px;
     height: 420px;
     margin: auto;
-    background-color: rgb(223, 207, 190);
+    background-color: black;
     padding: 1em;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);*/
     font-family: Arial, Helvetica, sans-serif;
     transition: transform .5s;
     border-radius: 25px;
+
+    border: 0.1px solid black;
+    outline-style: solid;
+    outline-color: darkred;
 }
 
 .product-card:hover{
@@ -49,6 +63,7 @@ img{
     font-size: 1.3em;
     margin: 0.5em 0;
     font-weight: bold;
+    color: white;
 }
 .product-card div {
     font-size: 1.2em;
