--- a/src/main/resources/templates/highest_rated_movies.html
+++ b/src/main/resources/templates/highest_rated_movies.html
@@ -55,8 +55,8 @@
             padding: 20px;
             margin-bottom: 15px;
             border-radius: 8px;
-            background: rgba(25, 25, 25, 0.9); /* Dark Grey/Black Background */
-            box-shadow: 0 2px 10px rgba(255, 0, 0, 0.6); /* Red Glow */
+            background: rgba(25, 25, 25, 0.9); /
+            box-shadow: 0 2px 10px rgba(255, 0, 0, 0.6);
             transition: transform 0.3s, box-shadow 0.3s;
         }
 
