--- a/src/main/resources/templates/cart_index.html
+++ b/src/main/resources/templates/cart_index.html
@@ -56,7 +56,7 @@
       z-index: -1;
     }
 
-    p, label, input, span, td, tr{
+    p, label, input, td, tr{
 
       font-family: poppins;
       font-size: 15px;
