Confirm payment page when users registers and buys subscription

--- a/src/main/resources/templates/registerSuccess.html
+++ b/src/main/resources/templates/registerSuccess.html
@@ -106,7 +106,7 @@
 
         .price-col ul li::before{
             content: '\2022';
-            color: #e33058;
+            color: darkred;
             font-weight: bold;
             margin-right: 8px;
         }
@@ -117,7 +117,7 @@
             background: transparent;
             color: #fff;
             font-size: 15px;
-            border: 1px solid #e33058;
+            border: 1px solid darkred;
             border-radius: 6px;
             margin-top: 30px;
             cursor: pointer;
@@ -125,7 +125,7 @@
         }
 
         .price-col button:hover{
-            background: #e33058;
+            background: darkred;
         }
 
 
