--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -305,9 +305,7 @@
 
 <div  th:unless="${#ctx.session.loggedInUser != null}">
   <style>
-    body {
-      background-image: url("https://wallpapers.com/images/featured/movie-9pvmdtvz4cb0xl37.jpg");
-    }
+
     h2{
       display: flex;
       justify-content: center;
@@ -324,7 +322,25 @@
       align-items: center;
     }
 
+    body{
+      margin: 0;
+    }
+
+    #background1{
+      background-image: url("https://images.unsplash.com/photo-1489599849927-2ee91cede3ba?q=80&w=2670&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D.avif");
+      height: 100vh;
+      width: 100%;
+      background-size: cover;
+      background-position: center center;
+      position: fixed;
+      top: 0;
+      z-index: -1;
+    }
+
   </style>
+
+  <div id="background1"></div>
+
 
   <h2>You have to login to get access to this page</h2>
   <a href ="/" ><button type="button" class="btn btn-primary">Go to Login page</button></a>
