--- a/src/main/resources/templates/forgot_password.html
+++ b/src/main/resources/templates/forgot_password.html
@@ -2,16 +2,75 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
 
-    <title>Forgot Password</title>
+    <style>
+        body {
+            margin: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+        }
+
+        #background {
+            background-image: url("https://images.unsplash.com/photo-1489599849927-2ee91cede3ba?q=80&w=2670&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D.avif");
+            height: 100vh;
+            width: 100%;
+            background-size: cover;
+            background-position: center center;
+            position: fixed;
+            top: 0;
+            z-index: -1;
+        }
+        .container {
+            background: rgba(0, 0, 0, 0.7);
+            padding: 30px;
+            border-radius: 10px;
+            text-align: center;
+            color: white;
+            width: 400px;
+        }
+        .form-control {
+            width: 100%;
+            margin-bottom: 15px;
+        }
+        .btn-dark {
+            width: 100%;
+        }
+    </style>
+
+    <title>Password Reset</title>
+
 </head>
 <body>
-<form action="/forgot-password" method="post">
-    <input type="email" name="email" placeholder="Enter your email" required>
-    <button type="submit">Reset Password</button>
-</form>
-<p th:text="${message}"></p>
 
+<div id="background"></div>
+
+<div class="container">
+    <h2>Forgot Password</h2>
+    <form action="/forgot-password" method="post">
+        <div class="d-flex justify-content-center">
+            <label for="email" class="form-label" style="color:white">Enter your Email</label>
+            <input type="email" class="form-control" id="email" name="email" style="width:300px;display: block; margin: auto;" required>
+        </div>
+        <button type="submit" class="btn btn-dark">Submit</button>
+    </form>
+
+    <div th:if="${noEmail}" class="message text-danger">
+        <p th:text="${noEmail}"></p>
+    </div>
+    <div th:if="${failSend}" class="message text-danger">
+        <p th:text="${failSend}"></p>
+    </div>
+    <div th:if="${sent}" class="message text-success">
+        <p th:text="${sent}"></p>
+    </div>
+</div>
+
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
