--- a/src/main/resources/templates/reset_password.html
+++ b/src/main/resources/templates/reset_password.html
@@ -2,19 +2,53 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
 
-    <title>Forgot Password</title>
+    <title>Password Reset</title>
+
+    <style>
+        body {
+            margin: 0;
+        }
+
+        #background {
+            background-image: url("https://images.unsplash.com/photo-1489599849927-2ee91cede3ba?q=80&w=2670&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D.avif");
+            height: 100vh;
+            width: 100%;
+            background-size: cover;
+            background-position: center center;
+            position: fixed;
+            top: 0;
+            z-index: -1;
+        }
+        h2{
+            color: white;
+        }
+    </style>
+
 </head>
 <body>
-<form action="/reset-password" method="post">
-    <input type="hidden" name="token" th:value="${token}">
-    <label>New Password:</label>
-    <input type="password" name="password" required>
-    <button type="submit">Reset Password</button>
-</form>
 
-<p th:text="${message}"></p>
+<div id="background"></div>
 
+<div class="container mt-5">
+    <h2>Set New Password</h2>
+    <form action="/set-password" method="post">
+        <div class="mb-3">
+            <label for="newPassword" class="form-label">New Password</label>
+            <input type="password" class="form-control" id="newPassword" name="newPassword" required>
+        </div>
+        <button type="submit" class="btn btn-primary">Set Password</button>
+    </form>
+    <div th:if="${incorrectPassword}" class="text-danger">
+        <p th:text="${incorrectPassword}"></p>
+    </div>
+    <div th:if="${success}" class="text-success">
+        <p th:text="${success}"></p>
+    </div>
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
