Sending email link for forget password

--- a/src/main/resources/templates/reset_password.html
+++ b/src/main/resources/templates/reset_password.html
@@ -34,7 +34,7 @@
 
 <div class="container mt-5">
     <h2>Set New Password</h2>
-    <form action="/set-password" method="post">
+    <form action="/set-password" method="get">
         <div class="mb-3">
             <label for="newPassword" class="form-label">New Password</label>
             <input type="password" class="form-control" id="newPassword" name="newPassword" required>
