--- a/src/main/resources/templates/forgot_password.html
+++ b/src/main/resources/templates/forgot_password.html
@@ -49,6 +49,8 @@
 
 <div id="background"></div>
 
+<div id="message" class="message" th:text="${message}"></div>
+
 <div class="container">
     <h2>Forgot Password</h2>
     <form action="/forgot-password" method="post">
@@ -69,7 +71,7 @@
         <p th:text="${sent}"></p>
     </div>
 </div>
-
+<!-- -->
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
