--- a/src/main/resources/templates/reset_success.html
+++ b/src/main/resources/templates/reset_success.html
@@ -7,6 +7,6 @@
 <body>
 <h2>Password Reset Successful</h2>
 <p>Your password has been successfully reset.</p>
-<a href="/login">Go to Login</a>
+<a href="/">Go to Login</a>
 </body>
 </html>
