--- a/src/main/resources/templates/reset_password.html
+++ b/src/main/resources/templates/reset_password.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <title>Password Reset</title>
 
     <style>
@@ -34,23 +34,66 @@
 
 <div class="container mt-5">
     <h2>Set New Password</h2>
-    <form action="/set-password" method="get">
+    <form action="/set-password" method="Get" onsubmit="return validatePassword()" onreset="resetForm()">
         <div class="mb-3">
             <label for="newPassword" class="form-label">New Password</label>
             <input type="password" class="form-control" id="newPassword" name="newPassword" required>
+        </div>
+        <div class="mb-3">
+            <label for="newPassword" class="form-label">New Password</label>
+            <input type="password" class="form-control" id="newPassword2" name="newPassword2" required>
         </div>
         <button type="submit" class="btn btn-primary">Set Password</button>
     </form>
     <div th:if="${incorrectPassword}" class="text-danger">
         <p th:text="${incorrectPassword}"></p>
     </div>
+    <div th:if="${Password}" class="text-danger">
+        <p th:text="${Password}"></p>
+    </div>
+    <div th:if="${noMatch}" class="text-danger">
+        <p th:text="${noMatch}"></p>
+    </div>
     <div th:if="${success}" class="text-success">
         <p th:text="${success}"></p>
     </div>
 </div>
 
-<!-- -->
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<script>
+    function validatePassword(){
+        const password = document.getElementById("newPassword").value;
+        const password2 = document.getElementById("newPassword2").value;
+
+        const passwordErr1 = document.getElementById("password-error");
+        const passwordErr2 = document.getElementById("password2-error");
+
+        passwordErr1.textContent = "";
+        passwordErr2.textContent = "";
+
+        const passwordRegex = /^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*?&])[A-Za-z\d@$!%*?&]{7,70}$/;
+
+        if(password === ""){
+            passwordErr1.textContent = "Password was left empty, try register again";
+            valid = false
+        } else if (!passwordRegex.test(password)){
+            passwordErr1.textContent = "Password must be within 7-70 characters, one uppercase letter, one lowercase letter, one number and one special character";
+            valid = false
+        }
+        if (password2 === ""){
+            passwordErr2.textContent = "Confirm Password was left empty, try register again";
+            valid = false
+        }else if (password != password2){
+            passwordErr2.textContent = "Password did not match, try register again";
+            valid = false
+        }
+
+    }
+    function resetForm() {
+        document.getElementById("password-error").textContent = "";
+        document.getElementById("password2-error").textContent = "";
+    }
+</script>
+
 </body>
 </html>
