--- a/src/main/resources/templates/reset_success.html
+++ b/src/main/resources/templates/reset_success.html
@@ -1,12 +1,71 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang=en xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
-  <title>Password Reset Successful</title>
+  <link rel="stylesheet" href="/css/styles.css" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+  <title>Password reset success!</title>
 </head>
+<style>
+
+
+  h1{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 50px;
+    color: white;
+    font-weight: bold;
+    -webkit-text-stroke: 1px darkred;
+    font-family: poppins;
+  }
+
+  a{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  body{
+    margin: 0;
+  }
+
+  #background{
+    background-image: url("https://images.unsplash.com/photo-1489599849927-2ee91cede3ba?q=80&w=2670&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D.avif");
+    height: 100vh;
+    width: 100%;
+    background-size: cover;
+    background-position: center center;
+    position: fixed;
+    top: 0;
+    z-index: -1;
+  }
+
+  .center {
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    margin-top: 150px;
+  }
+
+</style>
 <body>
-<h2>Password Reset Successful</h2>
-<p>Your password has been successfully reset.</p>
-<a href="/">Go to Login</a>
+
+
+<h1 class="heading">ScreenSafari</h1>
+
+
+<div id="background"></div>
+
+
+
+<div class="center">
+  <h2 style="font-weight: bold; color: white; font-family: poppins">You have successfully reset you password</h2>
+  <a href="/" style="text-decoration:none"><button type="button" class="btn btn-danger" style="font-weight: bold; color: white; font-family: poppins" >Go to the Login Page</button></a>
+</div>
+
 </body>
 </html>
