User profile added. Able to change ur display name and user profile page.

--- a/src/main/resources/templates/fragments/menu.html
+++ b/src/main/resources/templates/fragments/menu.html
@@ -65,6 +65,8 @@
               <li><a class="dropdown-item" th:href="@{/addFriends}" style="font-weight: bold;font-family: poppins;">Add Friends</a></li>
               <li><hr class="dropdown-divider"></li>
               <li><a class="dropdown-item" th:href="@{/notifications}" style="font-weight: bold;font-family: poppins;">Friend Requests</a></li>
+              <li><hr class="dropdown-divider"></li>
+              <li><a class="dropdown-item" th:href="@{/UserProfile}" style="font-weight: bold;font-family: poppins;">User Profile</a></li>
             </ul>
           </li>
           <li class="nav-item dropdown">
