--- a/src/main/resources/templates/addFriends.html
+++ b/src/main/resources/templates/addFriends.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Add Friends</title>
+
     <link rel="stylesheet" href="/css/styles.css"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
@@ -22,8 +22,18 @@
             top: 0;
             z-index: -1;
         }
+        .username-container{
+            justify-content: center;
+            padding-top: 10px;
+            display: flex;
+        }
+        #username{
+            width:50%
+        }
+
     </style>
 
+    <title>Add Friends</title>
 </head>
 <body>
 
@@ -33,7 +43,7 @@
     <div th:replace="~{fragments/menu :: menu-bar}"></div>
     <h4>Add friends</h4>
     <form method="get" action="/searchForFriends">
-        <div style="text-align: center;" class="form-floating mb-3">
+        <div style="text-align: center;" class="username-container">
             <input type="text" class="form-control" id="username" name="username" placeholder="Enter Username" required>
             <label for="username">Enter Username</label>
         </div>
@@ -48,7 +58,7 @@
                         <div class="card-body p-4">
                             <div class="d-flex">
                                 <div class="flex-shrink-0">
-                                    <img src="https://static.vecteezy.com/system/resources/previews/002/318/271/non_2x/user-profile-icon-free-vector.jpg"
+                                    <img th:src="@{'/css/images/'+${u.user_image}}"
                                          alt="Generic placeholder image" class="img-fluid"
                                          style="width: 180px; border-radius: 10px;">
                                 </div>
