CSS changes for forget password reset page

--- a/src/main/resources/templates/forgot_password.html
+++ b/src/main/resources/templates/forgot_password.html
@@ -26,12 +26,14 @@
             z-index: -1;
         }
         .container {
-            background: rgba(0, 0, 0, 0.7);
+            background: black;
             padding: 30px;
             border-radius: 10px;
             text-align: center;
             color: white;
             width: 400px;
+            outline-style: solid;
+            outline-color: darkred;
         }
         .form-control {
             width: 100%;
