CSS changes for forget password reset page

--- a/src/main/resources/templates/forgot_password.html
+++ b/src/main/resources/templates/forgot_password.html
@@ -39,7 +39,7 @@
             width: 100%;
             margin-bottom: 15px;
         }
-        .btn-dark {
+        .btn-danger {
             width: 100%;
         }
     </style>
@@ -60,7 +60,7 @@
             <label for="email" class="form-label" style="color:white">Enter your Email</label>
             <input type="email" class="form-control" id="email" name="email" style="width:300px;display: block; margin: auto;" required>
         </div>
-        <button type="submit" class="btn btn-dark">Submit</button>
+        <button type="submit" class="btn btn-danger">Submit</button>
     </form>
 
     <div th:if="${noEmail}" class="message text-danger">
