--- a/src/main/resources/templates/notifications.html
+++ b/src/main/resources/templates/notifications.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Notifications</title>
-    <link rel="stylesheet" href="/css/styles.css" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="/css/styles.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 
     <style>
         body{
@@ -23,6 +24,37 @@
             top: 0;
             z-index: -1;
         }
+
+
+        .center {
+            margin: 0;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            -ms-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+            margin-top: 150px;
+        }
+
+        .notBought{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin-top: 300px;
+            font-weight: bold;
+        }
+
+
+        h1{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 50px;
+            color: white;
+            font-weight: bold;
+            -webkit-text-stroke: 1px darkred;
+            font-family: poppins;
+        }
     </style>
 </head>
 <body>
@@ -31,6 +63,10 @@
 <div th:if="${#ctx.session.loggedInUser != null}">
 
     <div th:replace="~{fragments/menu :: menu-bar}"></div>
+
+    <div>
+        <h1>Friend Request</h1>
+    </div>
 
 
         <div th:each="request : ${pendingRequests}">
@@ -48,7 +84,11 @@
         </div>
 
     <div th:if="${pendingRequests == null || pendingRequests.isEmpty()}">
-        <p>You currently have no friend requests.</p>
+
+        <p style="font-family: poppins; font-weight: bold; font-size: 15px; color: white" th:text="| ${#ctx.session.loggedInUser.getUsername()} , You currently have no friend request |" class="notBought" ></p>
+        <div class="center">
+            <a th:href="@{/addFriends}"><button type="button" class="btn btn-danger" title="Add Friends">Go here to add Friends</button></a>
+        </div>
     </div>
 
 
