Javadocs for the BillingAddressController, CartItemController, GenreController, Index Controller, MovieProduct Controller, MovieTestController, SubscriptionController, SubscriptionPlanController and User Controller

--- a/src/main/resources/templates/movieProductSearch.html
+++ b/src/main/resources/templates/movieProductSearch.html
@@ -223,7 +223,7 @@
     </div>
 </div>
 
-<a th:href="@{/store_index}"><button type="button" class="btn btn-danger" title="Store" style="margin-left: 1500px; margin-bottom: 50px">Go back to store</button></a>
+<a th:href="@{/store_index}"><button type="button" class="btn btn-danger" title="Store" style="margin-left: 1500px; margin-bottom: 70px">All Store Products</button></a>
 
 
 <div class="center">
