--- a/src/main/resources/templates/videos.html
+++ b/src/main/resources/templates/videos.html
@@ -117,7 +117,7 @@
   <div th:replace="~{fragments/menu :: menu-bar}"></div>
 
   <div>
-  <h1>Movie Videos</h1>
+  <h1 th:text="| Movie Videos for ${movieName} |">Movie Videos</h1>
   </div>
 
 
