--- a/src/main/resources/templates/reset_password.html
+++ b/src/main/resources/templates/reset_password.html
@@ -10,6 +10,11 @@
     <style>
         body {
             margin: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
         }
 
         #background {
@@ -22,8 +27,22 @@
             top: 0;
             z-index: -1;
         }
-        h2{
+        .container {
+            background: black;
+            padding: 30px;
+            border-radius: 10px;
+            text-align: center;
             color: white;
+            width: 400px;
+            outline-style: solid;
+            outline-color: darkred;
+        }
+        .form-control {
+            width: 100%;
+            margin-bottom: 15px;
+        }
+        .btn-danger {
+            width: 100%;
         }
     </style>
 
@@ -43,7 +62,7 @@
             <label for="newPassword" class="form-label">New Password</label>
             <input type="password" class="form-control" id="newPassword2" name="newPassword2" required>
         </div>
-        <button type="submit" class="btn btn-primary">Set Password</button>
+        <button type="submit" class="btn btn-danger">Set Password</button>
     </form>
     <div th:if="${incorrectPassword}" class="text-danger">
         <p th:text="${incorrectPassword}"></p>
